--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
     },
     "compileOnSave": true,
     "include": [
-        "./src/**/*",
-        "node_modules/grpc-tsd/src/grpc.d.ts"
+        "./src/**/*"
     ]
 }
