--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "./build/index.js",
     "typings": "./build/index.d.ts",
     "scripts": {
+        "pretest": "tsc --project ./test",
+        "test": "./node_modules/.bin/mocha ./test/test.js",
         "prepublish": "tsc"
     },
     "author": {
@@ -25,8 +27,12 @@
         "lodash": "^4.17.4"
     },
     "devDependencies": {
+        "@types/chai": "^4.1.2",
+        "@types/lodash": "4.14.98",
+        "@types/mocha": "^2.2.47",
         "@types/node": "^9.4.0",
-        "@types/lodash": "4.14.98"
+        "chai": "^4.1.2",
+        "mocha": "^5.0.0"
     },
     "keywords": [
         "json",
